<resources>
    <string name="app_name">MPhoto</string>
    <string name="opendrawer">open drawer</string>
    <string name="closedrawer">close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="rr">TODO</string>
    <string name="dff">TODO</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="ff">Login</string>
    <string name="save_your_photos_permanatly">Save your photos permanatly</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="gbgf">Login</string>
    <string name="no_inernet_connection">No Inernet Connection</string>
    <string name="retry">Retry</string>
    <string name="bgbrgb">Login</string>
    <string name="brb">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="fbgbbgbd">Save your photos permanatly</string>
    <string name="your_name">Your Name</string>
    <string name="hdnhndh">E-mail</string>
    <string name="dfbsgrn">Password</string>
    <string name="signup">SignUp</string>
    <string name="save_your_photo_permanently">Save your photo permanently</string>
    <string name="no_data_availble">No data availble</string>
    <string name="store_your_images_permantly">Store your Images permantly</string>
</resources>